<resources>
    <string name="app_name" translatable="false">MyDesignApp</string>
    <string name="find_doctor">Find Doctor</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="mobile_number_or_email">Mobile number or email</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or Login with</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="email_id">Email id</string>
    <string name="mobile_number">Mobile number</string>
    <string name="logout">Logout</string>
    <string name="register_to_continue">Register to continue</string>
    <string name="welcome">Welcome</string>
    <string name="home">Home</string>
    <string name="appointments">Appointments</string>
    <string name="current_location">Current Location</string>
    <string name="rajkot_gujarat">Rajkot, Gujarat</string>
    <string name="book_now">Book Now</string>
    <string name="covid_19_rapid_n_test_at_home">COVID-19 rapid \n test at home</string>
    <string name="view_all">View all</string>
    <string name="heart_disease">Heart Disease</string>
    <string name="dental_care">Dental Care</string>
    <string name="select_speciality">Select Speciality</string>
    <string name="heart_disease_specialist">Heart Disease Specialist</string>
    <string name="more">More</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="favourites">Favourites</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="doctor_profile">Doctor Profile</string>
    <string name="about">About</string>
    <string name="reviews">Reviews</string>
    <string name="_3_2_mi">3.2 mi</string>
    <string name="dummy">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined.</string>
    <string name="dummyreview">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</string>
    <string name="qualification">Qualification</string>
    <string name="m_b_b_s_f_c_p_s_cardio_specialist">M.B.B.S, F.C.P.S, Cardio Specialist</string>
    <string name="tom_hank">Tom Hank</string>
    <string name="jerry_crews">Jerry Crews</string>
    <string name="jey_simmons">Jey Simmons</string>
    <string name="explore_specialities">Explore Specialities</string>
    <string name="today_s_appointment">Today\'s Appointment</string>
    <string name="upcoming">Upcoming</string>
    <string name="my_appointments">My Appointments</string>
    <string name="past">Past</string>
    <string name="write_review">Write Review</string>
    <string name="notification">Notification</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="henry_cavill">Henry Cavill</string>
    <string name="_28_years_old">28 years old</string>
    <string name="personal_details">Personal Details</string>
    <string name="_746_2486265">+(746) 2486265</string>
    <string name="henry_gmail_com">henry@gmail.com</string>
    <string name="allergy_details">Allergy Details</string>
    <string name="wed">Wed</string>
    <string name="_14_oct">14 Oct</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="_16_oct">16 Oct</string>
    <string name="_17_oct">17 Oct</string>
    <string name="sat">Sat</string>
    <string name="mon">Mon</string>
    <string name="_19_oct">19 Oct</string>
    <string name="morning_slots">Morning Slots</string>
    <string name="evening_slots">Evening Slots</string>
    <string name="previously_visited">Previously Visited</string>
    <string name="_1225_washington_st_hanover_ma_usa">1225 Washington St. Hanover. MA, USA</string>
    <string name="success">Success !</string>
    <string name="your_appointment_has_been_confirmed">Your Appointment has been confirmed</string>
    <string name="date_time"><![CDATA[Date & Time:]]></string>
    <string name="Sign" translatable="false">sign</string>
    <string name="appointment_type">Appointment Type:</string>
    <string name="appointment_id">Appointment Id:</string>
    <string name="appointment_charge">Appointment Charge:</string>
    <string name="continue_word">Continue</string>
    <string name="accounts">Accounts</string>
    <string name="syncing">Syncing</string>
    <string name="configue_background_refreshing">Configue background refreshing</string>
    <string name="email_settings">Email Settings</string>
    <string name="restrict_content_for_your_inbox">Restrict content for your inbox</string>
    <string name="wifi">Wifi</string>
    <string name="limit_data_usage_to_wifi_only">Limit Data usage to wifi only</string>
    <string name="notifications">Notifications</string>
    <string name="change_app_notifications_settings">Change app notifications settings</string>
    <string name="get_in_touch">Get in touch</string>
    <string name="your_name">Your name</string>
    <string name="your_email_address">Your email address</string>
    <string name="send_message">Send Message</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="general_site_usage">General Site Usage</string>
    <string name="last_revised_december_10_2022">Last Revised: January 10,2022</string>
    <string name="_1_your_agreement">1. Your Agreement</string>
    <string name="faq">FAQ</string>
    <string name="consult_with_your_doctor_online">Consult with your Doctor online</string>
    <string name="find_the_best_specialist_doctor_near_you">Find the best specialist \n doctor near you</string>
    <string name="patient_details">Patient Details</string>
    <string name="patient_name">Patient Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="write_your_problem">Write your Problem</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="order_summary">Order Summary</string>
    <string name="_3231">**** **** **** 3231</string>
    <string name="net_banking">Net Banking</string>
    <string name="pay_now">Pay Now</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="click_it">Click it</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="vpn">vpn</string>
    <string name="nointernet">no internet</string>
    <string name="name">Name</string>
    <string name="change_language">Change Language</string>
    <string name="gujarati" translatable="false">ગુજરાતી</string>
    <string name="skin_care">Skin Care</string>
    <string name="eye_specialities">Eye Specialities</string>
    <string name="mental_health">Mental Health</string>
    <string name="lungs">Lungs Disease</string>
    <string name="kidney_disease">Kidney Disease</string>
    <string name="digestive_disease">Digestive Disease</string>
    <string name="general_physician">General Physician</string>
    <string name="ear_nose">Ear ,Nose</string>
    <string name="review_question">We want to know about your experience \n with the doctor</string>
    <string name="submit">Submit</string>
    <string name="working_time">Working Time</string>
    <string name="address">Address</string>
</resources>