<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".fragment.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_10sdp">

            <RelativeLayout
                android:id="@+id/rl_top"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/iv_settingsBack"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/left_arrow" />

                <com.example.mydesignapp.helper.CustomTextViewBold
                    style="@style/black_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toRightOf="@+id/iv_settingsBack"
                    android:text="@string/settings"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rl_top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/user_icon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:orientation="vertical">

                        <com.example.mydesignapp.helper.CustomTextViewMedium
                            android:id="@+id/tv_accounts"
                            style="@style/black_11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/accounts" />

                        <com.example.mydesignapp.helper.CustomTextViewMedium
                            android:id="@+id/tv_accountsdesc"
                            style="@style/gray_10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Manage all your accounts" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/sync" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:orientation="vertical">

                        <com.example.mydesignapp.helper.CustomTextViewMedium
                            android:id="@+id/tv_syncing"
                            style="@style/black_11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/syncing" />

                        <com.example.mydesignapp.helper.CustomTextViewMedium
                            android:id="@+id/tv_syncingdesc"
                            style="@style/gray_11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/configue_background_refreshing" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/email_inbox" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:orientation="vertical">

                        <com.example.mydesignapp.helper.CustomTextViewMedium
                            android:id="@+id/tv_email"
                            style="@style/black_11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email_settings" />

                        <com.example.mydesignapp.helper.CustomTextViewMedium
                            android:id="@+id/tv_emaildesc"
                            style="@style/gray_11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/restrict_content_for_your_inbox" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/wifi" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:orientation="vertical">

                        <com.example.mydesignapp.helper.CustomTextViewMedium
                            android:id="@+id/tv_wifi"
                            style="@style/black_11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/wifi" />

                        <com.example.mydesignapp.helper.CustomTextViewMedium
                            android:id="@+id/tv_wifidesc"
                            style="@style/gray_11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/limit_data_usage_to_wifi_only" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/bell" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:orientation="vertical">

                        <com.example.mydesignapp.helper.CustomTextViewMedium
                            android:id="@+id/tv_notifications"
                            style="@style/black_11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/notifications" />

                        <com.example.mydesignapp.helper.CustomTextViewMedium
                            android:id="@+id/tv_notificationsdesc"
                            style="@style/gray_11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/change_app_notifications_settings" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</FrameLayout>