<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    android:id="@+id/fl_more"
    android:layout_height="match_parent"
    tools:context=".fragment.MoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal">
            <com.example.mydesignapp.helper.CustomTextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more"
                style="@style/black_16"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/lv_myprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/user_icon"/>
                <com.example.mydesignapp.helper.CustomTextViewSemiBold
                    android:id="@+id/tv_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    style="@style/black_11"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:id="@+id/lv_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_settings"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/settings"/>
                <com.example.mydesignapp.helper.CustomTextViewSemiBold
                    android:id="@+id/tv_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    style="@style/black_11"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray"/>
            <LinearLayout
                android:id="@+id/lv_contactus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_contactus"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/contact"/>
                <com.example.mydesignapp.helper.CustomTextViewSemiBold
                    android:id="@+id/tv_contactus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    style="@style/black_11"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray"/>
            <LinearLayout
                android:id="@+id/lv_termsandconditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_termsandconditions"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/terms"/>
                <com.example.mydesignapp.helper.CustomTextViewSemiBold
                    android:id="@+id/tv_termsandconditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_conditions"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    style="@style/black_11"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray"/>
            <LinearLayout
                android:id="@+id/lv_faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_faq"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/faq"/>
                <com.example.mydesignapp.helper.CustomTextViewSemiBold
                    android:id="@+id/tv_faq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="FAQ"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    style="@style/black_11"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:id="@+id/lv_changelanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_changelanguage"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/translate_icon"/>
                <com.example.mydesignapp.helper.CustomTextViewSemiBold
                    android:id="@+id/tv_changelanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_language"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    style="@style/black_11"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:id="@+id/lv_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_logout"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/logout"/>
                <com.example.mydesignapp.helper.CustomTextViewSemiBold
                    android:id="@+id/tv_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    style="@style/black_11"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>